--- a/index.html
+++ b/index.html
@@ -26,17 +26,9 @@
   <div class="container">
     <!-- Header -->
     <header>
-  <nav class="navbar">
-    <div class="logo">My Blog</div>
-    <button class="menu-toggle" id="menu-toggle">☰</button>
-    <ul class="nav-links" id="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="blog/">Blog</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+      <h1>Ian Christopher Arceo</h1>
+      <p class="subtitle">General Virtual Assistant | Due Diligence Specialist | Social Media Manager</p>
+    </header>
 
     <!-- About Section -->
 <div class="section about-section">
@@ -276,14 +268,7 @@ window.addEventListener("scroll", revealCards);
 window.addEventListener("load", revealCards);
   </script>
   
-  <script>
-  const menuToggle = document.getElementById('menu-toggle');
-  const navLinks = document.getElementById('nav-links');
-
-  menuToggle.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
-  });
-</script>
+  
   
 </body>
 </html>
