--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
 
   <div class="container">
     <!-- Header -->
-    <header>
+<header>
+  <div class="header-content">
+    <img src="images/selfie.jpg" alt="Ian Christopher Arceo" class="profile-pic">
+    <div class="header-text">
       <h1>Ian Christopher Arceo</h1>
       <p class="subtitle">General Virtual Assistant | Due Diligence Specialist | Social Media Manager</p>
-    </header>
+    </div>
+  </div>
+</header>
 
     <!-- About Section -->
 <div class="section about-section">
